# MotionDetector

./: CMakeLists.txt  README.md
src/: MotionDetector.cpp
